[tool.poetry]
name = "waybacktweets"
version = "1.0"
description = "Retrieves archived tweets' CDX data from the Wayback Machine"
authors = ["Claromes <support@claromes.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
requests = "^2.30.0"
streamlit = "1.35.0"
rich = "^13.6.0"
httpx = "^0.27.0"
click = "^8.1.7"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
pallets-sphinx-themes = "^2.1.3"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-new-tab-link = "^0.4.0"
sphinx-click = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"
flake8-pyproject = "^1.2.3"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E701"]

[tool.poetry.scripts]
waybacktweets = 'waybacktweets.cli.main:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
