[tool.poetry]
name = "waybacktweets"
version = "1.0"
description = "Retrieves archived tweets CDX data from the Wayback Machine, performs necessary parsing, and saves the data."
authors = ["Claromes <support@claromes.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/claromes/waybacktweets"
keywords = [
    "Twitter",
    "X",
    "tweet",
    "Internet Archive",
    "Wayback Machine",
    "OSINT",
    "SOCMINT",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
exclude = ["app/**", "legacy_app/**", ".streamlit/**", "assets/**", "docs/**", "build/**", ".github/**", ".git/**", ".gitignore", ".pre-commit-config.yaml", "CITATION.cff"]

[tool.poetry.urls]
"Homepage" = "https://waybacktweets.claromes.com/"
"Documentation" = "https://waybacktweets.claromes.com/"
"Issue Tracker" = "https://github.com/claromes/waybacktweets/issues"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
rich = "^13.6.0"
click = "^8.1.7"
pandas = "^2.2.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
pallets-sphinx-themes = "^2.1.3"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-new-tab-link = "^0.4.0"
sphinx-click = "^6.0.0"
sphinx-autodoc-typehints = "^2.1.1"
sphinxcontrib-youtube = "^1.4.1"

[tool.poetry.group.dev.dependencies]
streamlit = "1.45.0"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"
flake8-pyproject = "^1.2.3"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E701"]

[tool.poetry.scripts]
waybacktweets = 'waybacktweets._cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
